# ESP32TimeServer

./: .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  CMakeLists.txt  README.md  Setup.md  sdkconfig.defaults
.github/workflows/: build-idf-v5-5-5.yml  build-idf-v6-0-2.yml  lint-markdown.yml
3D printable case/: EnclosureReadme.md
PCB/: Readme.md
components/SparkFun_u-blox_GNSS_v3/: CMakeLists.txt  README.md
main/: ESP32TimeServerSettings.h  idf_component.yml  main.cpp
